Removing the horizontal scrollbar problem occuring because of using '100vw' for product-overview image. The problem is solved using % value, but the other two solutions are also there in shared.css (commented out).

--- a/public/index.css
+++ b/public/index.css
@@ -10,7 +10,7 @@
     background-clip: border-box; */
     /* background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0, 0, 0, 0.5)); */
     /* background-image: radial-gradient(ellipse farthest-corner at 10% 50%, red, blue, green); */
-    width: 100vw;
+    width: 100%;
     height: 33vh;
     margin-top: 2.625rem;
     /* border: 5px dashed red; */
