--- a/public/shared.css
+++ b/public/shared.css
@@ -10,7 +10,12 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     /* height: 100%; */
+    /* overflow-x: hidden; */
 }
+
+/* body::-webkit-scrollbar {
+    width: 0;
+} */
 
 .backdrop {
     /* position: relative; */
